--- a/Restaurant/Areas/Admin/Views/MenuItem/Create.cshtml
+++ b/Restaurant/Areas/Admin/Views/MenuItem/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restourant.Areas.Admin.Models
-
+﻿
 @model MenuItemCreateViewModel
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
@@ -31,9 +30,9 @@
                 <div class="form-group">
                     <label>Cover image</label>
                     <div class="input-group col-xs-12">
-                        <input asp-for="CoverImageFile" class="form-control file-upload-info" placeholder="Upload Image">
+                        <input asp-for="ImagesFiles" class="form-control file-upload-info" placeholder="Upload Image">
                     </div>
-                    <span asp-validation-for="CoverImageFile" class="text-danger"></span>
+                    <span asp-validation-for="ImagesFiles" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label> image URL</label>
@@ -46,9 +45,9 @@
                 <div class="form-group">
                     <label>Images</label>
                     <div class="input-group col-xs-12">
-                        <input asp-for="ImageFile" class="form-control file-upload-info" placeholder="Upload Images">
+                        <input asp-for="ImageFiles" class="form-control file-upload-info" placeholder="Upload Images">
                     </div>
-                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+                    <span asp-validation-for="ImageFiles" class="text-danger"></span>
                 </div>
                 <div asp-validation-summary="ModelOnly"></div>
                 <button type="submit" class="btn btn-primary mr-2">Submit</button>
