--- a/Restaurant/Views/ReserveTable/Index.cshtml
+++ b/Restaurant/Views/ReserveTable/Index.cshtml
@@ -490,7 +490,7 @@
                                         <a href="shop-4cols.html">shop 4 columns</a>
                                     </li>
                                     <li>
-                                        <a href="shop-products.html">shop products</a>
+                                        <a href="shop-MenuItems.html">shop MenuItems</a>
                                     </li>
                                     <li>
                                         <a href="shop-single.html">shop single</a>
