--- a/Restaurant/wwwroot/assets/css/style-arabic.css
+++ b/Restaurant/wwwroot/assets/css/style-arabic.css
@@ -54,8 +54,8 @@ ul.comments-list .comment-body .comment .date,
 .countdown-amount,
 .countdown-period,
 .widget-info .info--title,
-.widget-recent-products .product .product-desc .product-meta,
-.widget-recent-products .product .product-title a,
+.widget-recent-MenuItems .product .product-desc .product-meta,
+.widget-recent-MenuItems .product .product-title a,
 .shop-filter li a,
 .product--content .product--title a,
 .product--content .product--price,
