--- a/Restaurant/wwwroot/assets/css/style-dark.css
+++ b/Restaurant/wwwroot/assets/css/style-dark.css
@@ -125,7 +125,7 @@ ul.icon-list li i,
 .portfolio-standard .portfolio-item .portfolio--title h4 a,
 .table>thead:first-child>tr:first-child>th,
 .timeline--item .timeline--item-content h3:before,
-.widget-recent-products .product .product-title a,
+.widget-recent-MenuItems .product .product-title a,
 .header-fixed-side .navbar-nav a,
 .portfolio-parallax .portfolio-item .portfolio--title h4 a,
 .countdown-dark .countdown-amount,
@@ -206,7 +206,7 @@ table,
 .table>thead>tr>th,
 .table-bordered,
 .tabs-vertical.tabs .nav-tabs,
-.widget-recent-products .product .product-desc,
+.widget-recent-MenuItems .product .product-desc,
 .header-fixed-side .header--panel .navbar-nav > li,
 .cart-table .table,
 .cart-shiping,
