--- a/Restaurant/wwwroot/assets/css/style-rtl.css
+++ b/Restaurant/wwwroot/assets/css/style-rtl.css
@@ -1358,7 +1358,7 @@ footer .footer--social-newsletter button {
 .entry-widget .entry-widget-title:after,
 .menu-simple .dish-panel .dish--img,
 .widget .widget--title:after,
-.widget-recent-products .product img,
+.widget-recent-MenuItems .product img,
 .widget-recent-posts img {
 	left: auto;
 	right: 0;
@@ -1541,7 +1541,7 @@ ul.mega-menu > li:last-child {
 	padding-right: 60px;
 }
 
-.widget-recent-products .product .product-desc {
+.widget-recent-MenuItems .product .product-desc {
 	padding-left: 0;
 	padding-right: 65px;
 }
