--- a/Restaurant/Views/_ViewImports.cshtml
+++ b/Restaurant/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Restourant.Models
+@using Restourant.DataContext.Entities;
 @using Restaurant
 @using Restaurant.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
