--- a/Restaurant/Views/Account/ChangePassword.cshtml
+++ b/Restaurant/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,7 @@
-﻿@model ChangePasswordViewModel
+﻿@{
+    Layout = null;
+}
+@model ChangePasswordViewModel
 <!DOCTYPE html>
 <html lang="en">
 <head>
