--- a/Restaurant/Views/Shared/_Layout.cshtml
+++ b/Restaurant/Views/Shared/_Layout.cshtml
@@ -95,67 +95,11 @@
                                                     <div class="col-md-3">
                                                         <ul>
                                                             <li>
-                                                                <a href="index.html">home main</a>
+                                                                <a asp-controller="Home"asp-action="index">home main</a>
                                                             </li>
-                                                            <li>
-                                                                <a href="homepage-2.html">homeoage 2</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-3.html">homeoage 3</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-4.html">homeoage 4</a>
-                                                            </li>
+                                                 
                                                         </ul>
-                                                    </div>
-                                                    <!-- .col-md-3 end -->
-                                                    <!-- Column #2 -->
-                                                    <div class="col-md-3">
-                                                        <ul>
-                                                            <li>
-                                                                <a href="homepage-5.html">homepage 5</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-6.html">homepage 6</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-7.html">homepage 7</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-8.html">homepage 8</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <!-- .col-md-2 end -->
-                                                    <!-- Column #3 -->
-                                                    <div class="col-md-3">
-                                                        <ul>
-                                                            <li>
-                                                                <a href="homepage-9-boxed.html">homepage 9 (boxed)</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-10-wide.html">homepage 10 (wide)</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-11-dark.html">homepage 11 (dark)</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-12-shop.html">homepage 12 (shop)</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <!-- .col-md-3 end -->
-                                                    <!-- Column #3 -->
-                                                    <div class="col-md-3">
-                                                        <ul>
-                                                            <li>
-                                                                <a href="homepage-rtl.html">homepage RTL</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="homepage-arabic.html">homepage Arabic</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
+                                                    
                                                     <!-- .col-md-3 end -->
                                                 </div>
                                                 <!-- .row end -->
@@ -166,6 +110,27 @@
                                     <!-- .mega-dropdown-menu end -->
                                 </li>
                                 <!-- li end -->
+                                <li class="has-dropdown">
+                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle  menu-item" data-hover="pages">Account</a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Register">Register</a>
+                                        </li>
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Login">Login</a>
+                                        </li>
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Logout">Log out</a>
+                                        </li>
+                                        <li>
+                                            <a asp-controller="Account" asp-action="ForgotPassword">Forgot Password</a>
+                                        </li>
+                                        <li>
+                                            <a asp-controller="Account" asp-action="ChangePassword">Change Password</a>
+                                        </li>
+                                        
+                                    </ul>
+                                </li>
                                 <!-- About Menu -->
                                 <li class="has-dropdown">
                                     <a href="#" data-toggle="dropdown" class="dropdown-toggle menu-item">About</a>
@@ -475,13 +440,8 @@
                                 <!-- li end -->
                                 <!-- shop Menu -->
                                 <li class="has-dropdown">
-                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle menu-item" data-hover="shop">shop</a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a asp-controller="Shop"asp-action="index">shop in our restaurant</a>
-                                        </li>
-                                       
-                                    </ul>
+                                    
+
                                 </li>
                                 <!-- li end -->
                                 <!-- Elements Menu -->
